log
Thu Mar 19 07:31:54 PM UTC 2026: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:56:18: error: implicit declaration of function ‘firt’; did you mean ‘first’? [-Wimplicit-function-declaration]
   56 |    int primero = firt(L);
      |                  ^~~~
      |                  first
exercises.c:57:18: error: comparison between pointer and integer [-Werror]
   57 |    while(primero != NULL){
      |                  ^~
exercises.c:59:15: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   59 |       primero = next(L);
      |               ^
cc1: all warnings being treated as errors
604c124
Thu Mar 19 07:33:30 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:58:11: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   58 |       suma+= primero;
      |           ^~
b364c2b
Thu Mar 19 07:34:44 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
b40b556
